banniere en haut

--- a/SAE_game/index.html
+++ b/SAE_game/index.html
@@ -6,6 +6,13 @@
     <title>Collection de jeux</title>
 </head>
 <body>
-    
+    <div>
+        <div>Accueil</div>
+        <div>Categories</div>
+        <div>Decouvrir</div>
+        <div>Mon Compte</div>
+        <input type='button' class="Bouton" value="Connexion"/>
+        <input type='button' class="Bouton" value="S'inscrire"/>
+    </div>
 </body>
 </html>
