--- a/SAE_game/index.html
+++ b/SAE_game/index.html
@@ -6,13 +6,16 @@
     <title>Collection de jeux</title>
 </head>
 <body>
-    <div>
-        <div>Accueil</div>
-        <div>Categories</div>
-        <div>Decouvrir</div>
-        <div>Mon Compte</div>
+  <div>
+        <div class="vers_pages">Accueil</div>
+        <div class="vers_pages">Categories</div>
+        <div class="vers_pages">Decouvrir</div>
+        <div class="vers_pages">Mon Compte</div>
         <input type='button' class="Bouton" value="Connexion"/>
         <input type='button' class="Bouton" value="S'inscrire"/>
+    </div>
+    <div>
+        <input type="search">
     </div>
 </body>
 </html>
