--- a/SAE_game/index.html
+++ b/SAE_game/index.html
@@ -17,5 +17,11 @@
     <div>
         <input type="search">
     </div>
+    <div>
+        <h1>Collection de jeux de sociétés</h1>
+        <h4>Découvrez et gérez votre collection de jeux de sociétés</h4>
+        <input type='button' class="Bouton" value="Découvrir"/>
+        <input type='button' class="Bouton" value="Catégories"/>
+    </div>
 </body>
 </html>
