--- a/SAE_game/index.html
+++ b/SAE_game/index.html
@@ -6,7 +6,7 @@
     <title>Collection de jeux</title>
 </head>
 <body>
-  <div>
+  <div id="banniere">
         <div class="vers_pages">Accueil</div>
         <div class="vers_pages">Categories</div>
         <div class="vers_pages">Decouvrir</div>
@@ -15,13 +15,24 @@
         <input type='button' class="Bouton" value="S'inscrire"/>
     </div>
     <div>
-        <input type="search">
+        <input type="search" value="Rechercher un jeu par titre ou catégories">
     </div>
-    <div>
+    <div id="presentation">
         <h1>Collection de jeux de sociétés</h1>
         <h4>Découvrez et gérez votre collection de jeux de sociétés</h4>
         <input type='button' class="Bouton" value="Découvrir"/>
         <input type='button' class="Bouton" value="Catégories"/>
+    </div>
+    <div id="jeux_pop">
+        <h2>Découvrez nos jeux les plus populaires</h2>
+        <div>Boite 1</div>
+        <div>Boite 2</div>
+        <div>Boite 3</div>
+    </div>
+    <div class="infos_comp">
+        <div>A propos.</div>
+        <div>Contact.</div>
+        <div>Mention légales</div>
     </div>
 </body>
 </html>
