--- a/SAE_game/index.html
+++ b/SAE_game/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collection de jeux</title>
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="banniere">
-        <div class="vers_pages">Accueil</div>
-        <div class="vers_pages">Categories</div>
-        <div class="vers_pages">Decouvrir</div>
-        <div class="vers_pages">Mon Compte</div>
-        <input type='button' class="Bouton" value="Connexion"/>
-        <input type='button' class="Bouton" value="S'inscrire"/>
+    <div id="banniere">
+        <input type='button' id="Accueil" value="Accueil"/>
+        <input type='button' class="vers_page" id="Categories" value="Catégories"/>
+        <input type='button' class="vers_page" id="Categories" value="Decouvrir"/>
+        <input type='button' class="vers_page" id="Categories" value="Mon Compte"/>
+        <input type='button' class="Bouton Blanc" value="Connexion"/>
+        <input type='button' class="Bouton Noir" value="S'inscrire"/>
     </div>
     <div>
         <input type="search" value="Rechercher un jeu par titre ou catégories">
