--- a/SAE_game/index.html
+++ b/SAE_game/index.html
@@ -16,7 +16,7 @@
         <input type='button' class="Bouton Noir" value="S'inscrire"/>
     </div>
     <div>
-        <input type="search" value="Rechercher un jeu par titre ou catégories">
+        <input type="search" placeholder="Rechercher un jeu par titre ou catégories">
     </div>
     <div id="presentation">
         <h1>Collection de jeux de sociétés</h1>
