modification index.html

--- a/SAE_game/index.html
+++ b/SAE_game/index.html
@@ -4,37 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collection de jeux</title>
-    <link href="style.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Tête de page -->
     <header class="nav-header">
-        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e24d432f71ae5fc037e972e78951ca15052e5e8c7824a911375a22f8623cb7b3?placeholderIfAbsent=true&apiKey=d20a853adbac4dde9b424a402120db37" alt="Games Collection Logo" class="logo" />
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e24d432f71ae5fc037e972e78951ca15052e5e8c7824a911375a22f8623cb7b3?placeholderIfAbsent=true&apiKey=d20a853adbac4dde9b424a402120db37" alt="Games Collection Logo" class="logo">
         <nav class="nav-links">
-            <div>Accueil</div>
-            <div>Catégories</div>
-            <div>Découvrir</div>
-            <div>Mon Compte</div>
+            <a href="index.html">Accueil</a>
+            <a href="decouvrir.html">Découvrir</a>
+            <a href="compte.html">Mon Compte</a>
+            <a href="connexion_inscription.html">Connexion/Inscription</a>
         </nav>
     </header>
-    <div>
+
+    <!-- Barre de recherche -->
+    <div class="search-bar">
         <input type="search" placeholder="Rechercher un jeu par titre ou catégories">
     </div>
-    <div id="presentation">
-        <h1>Collection de jeux de sociétés</h1>
-        <h4>Découvrez et gérez votre collection de jeux de sociétés</h4>
-        <input type='button' class="Bouton" value="Découvrir"/>
-        <input type='button' class="Bouton" value="Catégories"/>
-    </div>
-    <div id="jeux_pop">
+
+    <!-- Présentation -->
+    <section id="presentation">
+        <h1>Collection de jeux de société</h1>
+        <h4>Découvrez et gérez votre collection de jeux de société</h4>
+        <div class="actions">
+            <a href="decouvrir.html"><button class="Bouton">Découvrir</button></a>
+        </div>
+    </section>
+
+    <!-- Section des jeux populaires -->
+    <section id="jeux_pop">
         <h2>Découvrez nos jeux les plus populaires</h2>
-        <div>Boite 1</div>
-        <div>Boite 2</div>
-        <div>Boite 3</div>
-    </div>
-    <div class="infos_comp">
-        <div>A propos.</div>
-        <div>Contact.</div>
-        <div>Mention légales</div>
-    </div>
+        <div class="cards">
+            <div class="card">
+                <h3>Titre du jeu</h3>
+                <p>Catégorie du jeu</p>
+                <p>Nombre d'exemplaires disponibles</p>
+            </div>
+            <div class="card">
+                <h3>Titre du jeu</h3>
+                <p>Catégorie du jeu</p>
+                <p>Nombre d'exemplaires disponibles</p>
+            </div>
+            <div class="card">
+                <h3>Titre du jeu</h3>
+                <p>Catégorie du jeu</p>
+                <p>Nombre d'exemplaires disponibles</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Pied de page -->
+    <footer>
+        <div class="colonne">
+            <h4>À propos</h4>
+            <ul>
+                <li><a href="">Mention légales</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
+
