--- a/SAE_game/connexion_inscription.html
+++ b/SAE_game/connexion_inscription.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion / Inscription</title>
     <link href="style.css" rel="stylesheet">
-    <link rel="stylesheet" href="connexion_style.css">
 </head>
 <body>
     <!-- Tête de page -->
@@ -16,8 +15,8 @@
 
         <nav class="nav-links">
             <a href="index.html" class="nav-link">Accueil</a>
-            <a href="Categories.html" class="nav-link">Découvrir</a>
-            <a href="page_administration.html" class="nav-link">Mon Compte</a>
+            <a href="decouvrir.html" class="nav-link">Découvrir</a>
+            <a href="monCompte.html" class="nav-link">Mon Compte</a>
             <a href="connexion_inscription.html" class="nav-link">Connexion/Inscription</a>
         </nav>
     </header>
