--- a/SAE_game/index.html
+++ b/SAE_game/index.html
@@ -9,12 +9,14 @@
 <body>
     <!-- Tête de page -->
     <header class="nav-header">
-        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e24d432f71ae5fc037e972e78951ca15052e5e8c7824a911375a22f8623cb7b3?placeholderIfAbsent=true&apiKey=d20a853adbac4dde9b424a402120db37" alt="Games Collection Logo" class="logo">
+        <a href="index.html">
+            <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e24d432f71ae5fc037e972e78951ca15052e5e8c7824a911375a22f8623cb7b3?placeholderIfAbsent=true&apiKey=d20a853adbac4dde9b424a402120db37" alt="Logo" class="logo">
+        </a>        
         <nav class="nav-links">
-            <a href="index.html">Accueil</a>
-            <a href="decouvrir.html">Découvrir</a>
-            <a href="compte.html">Mon Compte</a>
-            <a href="connexion_inscription.html">Connexion/Inscription</a>
+            <a href="index.html" class="nav-link">Accueil</a>
+            <a href="decouvrir.html" class="nav-link">Découvrir</a>
+            <a href="monCompte.html" class="nav-link">Mon Compte</a>
+            <a href="connexion_inscription.html" class="nav-link">Connexion/Inscription</a>
         </nav>
     </header>
 
@@ -36,21 +38,27 @@
     <section id="jeux_pop">
         <h2>Découvrez nos jeux les plus populaires</h2>
         <div class="cards">
-            <div class="card">
+            <a href="boite_jeu.html">
+                <div class="card">
                 <h3>Titre du jeu</h3>
                 <p>Catégorie du jeu</p>
                 <p>Nombre d'exemplaires disponibles</p>
-            </div>
-            <div class="card">
+                </div>
+            </a>
+            <a href="boite_jeu.html">
+                <div class="card">
                 <h3>Titre du jeu</h3>
                 <p>Catégorie du jeu</p>
                 <p>Nombre d'exemplaires disponibles</p>
-            </div>
-            <div class="card">
+                </div>
+            </a>
+            <a href="boite_jeu.html">
+                <div class="card">
                 <h3>Titre du jeu</h3>
                 <p>Catégorie du jeu</p>
                 <p>Nombre d'exemplaires disponibles</p>
-            </div>
+                </div>
+            </a>
         </div>
     </section>
 
